--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "postinstall": "bower i"
   },
   "engines": {
     "node": "4.2.4"
   },
   "dependencies": {
     "body-parser": "~1.13.2",
+    "bower": "^1.7.7",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
